# diffink-infer

./: .dockerignore  .gitignore  Dockerfile  README.md  download_checkpoints.py  gfont_to_diffink.py  handler.py  make_test_input.py  pyproject.toml  test_input.json  test_local.py
configs/: inference.yaml
diffink/: infer.py
diffink/dataset/: __init__.py  transform.py  vae_dataset.py
diffink/model/: blocks.py  diffusion.py  dit.py  gmm.py  modules.py  ocr.py  vae.py  writer.py
diffink/utils/: mask.py  utils.py  visual.py
docs/: DiffInk_VAE_泄漏问题.md  DiffInk_数据格式与gfont转换说明.md  DiffInk_训练损失与联合训练说明.md  试验总结.md
docs/images/compare/: summary.json
docs/images/expA_noleak/: summary.json
test/: README.md  test_input_gfont.json  test_input_inksight_6s10t.json  test_input_long.json  test_input_selfrecon.json  test_input_sentence.json  test_input_short.json
test/test_outputs_inksight_6s10t/: diffink_output.npy
test/test_outputs_sentence_v3/: diffink_output.npy
